--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -9900,8 +9900,8 @@ a:focus {
 }
 
 .bg-gradient-primary {
-  background-color: #0159fb;
-  background-image: linear-gradient(180deg,#0140fb 10%,#21212a 100%);
+  background-color: #4e73df;
+  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
   background-size: cover;
 }
 
@@ -11279,5 +11279,3 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
-
-
